# tfg-overtaking

./: README.md
src/: core  net.py  start.sh  test.py  train.py
src/Training/Models/: Highway_SAC_2023-12-25 22:41:01.794337  Highway_TRPO_2023-12-28 10:45:29.554931  IntersectionCarlaFeaturesOne_PPO_  IntersectionFeaturesOne_PPO_  IntersectionFeaturesOne_PPO_2023-09-14 11:23:36.727269  IntersectionFeaturesOne_PPO_2023-10-11 10:37:24.763512  IntersectionFeaturesOne_PPO_2lanes_good  IntersectionFeaturesOne_PPO_good  MultiCARLA_PPO_  MultiCARLA_PPO_2023-07-13 18:00:13.075855  MultiSMARTS_PPO_  MultiSMARTS_PPO_2023-09-19 13:49:44.299327  MultiSMARTS_PPO_old  SMARTS_PPO_  SMARTS_PPO_2023-07-13 12:00:03.239017  SMARTS_PPO__  monitor.csv  overtakingLine_A2C_2023-11-30 20:31:15.657624  overtakingLine_DQN_2023-11-30 18:34:55.556011  overtakingLine_PPO_2023-11-20 18:17:16.600944  overtakingLine_PPO_2023-11-20 18:17:33.019318  overtakingLine_PPO_2023-11-20 18:20:34.754840  overtakingLine_PPO_2023-11-20 18:32:05.609084  overtakingLine_PPO_2023-11-20 18:48:15.966577  overtakingLine_PPO_2023-12-01 09:47:57.490670  overtakingLine_SAC_2023-11-30 17:13:29.847763  overtakingOneLine_PPO_2023-12-06 10:47:11.692484  overtakingOneLine_PPO_2023-12-28 14:29:24.831595  overtakingOneLine_SAC_2023-12-27 23:34:06.892096  overtakingOneLine_TRPO_2023-12-28 12:01:34.821308  overtaking_DQN_2023-11-09 17:18:28.476779  overtaking_PPO_2023-11-06 14:44:22.635065  overtaking_PPO_2023-11-06 14:50:53.446360  overtaking_PPO_2023-11-06 14:55:04.590680  overtaking_PPO_2023-11-06 16:06:12.189445  overtaking_PPO_2023-11-06 22:26:10.447361  overtaking_PPO_2023-11-07 07:16:40.943214  overtaking_PPO_2023-11-07 22:35:28.738922  overtaking_PPO_2023-11-08 11:12:39.963639  overtaking_PPO_2023-11-08 14:49:26.969522  (+39 more)
src/agents/: AutonomousAgent.py  DummyAgent.py  start_Town03.sh  start_Town04.sh
src/catkin_ws/src/t4ac_localization/: CMakeLists.txt  package.xml
src/catkin_ws/src/t4ac_localization/launch/: t4ac_carla_localization.launch  t4ac_rviz_localization.launch
src/catkin_ws/src/t4ac_localization/src/: t4ac_pose_rviz_publisher.cpp  t4ac_tf_broadcaster.cpp
src/catkin_ws/src/t4ac_utils_layer/t4ac_viz_ros/: CMakeLists.txt  package.xml
src/catkin_ws/src/t4ac_utils_layer/t4ac_viz_ros/config/rviz/: mapping_debug.rviz  t4ac_real.rviz  t4ac_simulation.rviz
src/catkin_ws/src/t4ac_utils_layer/t4ac_viz_ros/config/rviz/plugins/: plugin_description.xml
src/catkin_ws/src/t4ac_utils_layer/t4ac_viz_ros/config/urdf/: t4ac_real.urdf  t4ac_simulation.urdf
src/catkin_ws/src/t4ac_utils_layer/t4ac_viz_ros/launch/: mapping_debug_rviz.launch  t4ac_rviz.launch
src/catkin_ws/src/t4ac_utils_layer/t4ac_viz_ros/src/: t4ac_hmi_rviz_node.py  t4ac_panel.cpp  t4ac_panel.hpp
src/config/: train_config_multi_state.py  train_config_multi_stateCNN.py  train_config_multi_state_LSTM.py  train_config_one_state.py  train_config_smarts.py  train_config_smarts_multi.py
src/dev_scenarios/: Town03.net.xml
src/dev_scenarios/Highway/: HighwaySumoEnvFeatures.py
src/dev_scenarios/Merge/: IntersectionSumoEnvFeaturesOneState.py
src/dev_scenarios/roundabout/: test_env.py  (+1 more)
src/pruebas/: IntersectionSumoEnvFeaturesOneState.py  overtaking_PPO_2023-11-12 20:09:04.369839
(+597 files in other folders)
